--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <div class="atm-card text-center mx-auto">
               <div class="mb-3">
                 <div class="bank-logo mx-auto mb-3">
-                  <img src="https://assets.satumomen.com/assets/logo-bca-biru-1687975058.webp" alt="Logo BCA" class="w-100 h-100">
+                  <img src="https://assets.satumomen.com/assets/logo-bca-biru-1687975058.png" alt="Logo BCA" class="w-100 h-100">
                 </div>
                 <div class="account-number" id="accountNumber">7295079371</div>
                 <div class="account-name">Atas Nama: Hisyam Aziz</div>
