--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
     <!-- Navigation -->
     <div class="nav-indicator d-flex justify-content-center">
-        <button class="btn btn-light d-flex flex-column align-items-center w-75 mx-2" data-target="#section1">
+        <button class="murub btn btn-light d-flex flex-column align-items-center w-75 mx-2" data-target="#section1">
             <i class="bi bi-calendar-week fs-4"></i>
             <span style="font-size: 10px;">Acara</span>
         </button>
